Use Java features